--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_blue">#00072b</color>
+    <color name="juicy_green">#7DFFA9</color>
+    <color name="bright_green">#F3FFF8</color>
 </resources>
