--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,22 @@
     <!-- Base application theme. -->
     <style name="Theme.WasteSegregator" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="fontProviderSystemFontFamily">@font/open_sans_semi_bold</item>
+        <item name="android:windowBackground">@color/bright_green</item>
+
+        <item name="colorPrimary">@color/juicy_green</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">#C4FFD8</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/juicy_green</item>
+        <item name="colorSecondaryVariant">@color/juicy_green</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/juicy_green</item>
         <!-- Customize your theme here. -->
+        <item name="android:textViewStyle">@style/BoldTextViewStyle</item>
+
     </style>
+
+
 </resources>
